--- a/teamrosters.html
+++ b/teamrosters.html
@@ -117,6 +117,24 @@
         <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072502/"style="color:white">Neutrino Identification with a Convolutional Neural Network in the NOvA Detectors</u></i></td>
         </tr>
     </table>
+     
+      <h2 style="text-align:left;color:white"><b><i>SUSY</b></i></h2>
+       <h4 style="color:white">LHC Experiments</h4>
+       <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+    <tr>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2223633/" style="color:white">Searches for SUSY (25' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2207033/" style="color:white">Search for electroweak production of SUSY at CMS (15' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072215/" style="color:white">SUSY searches with two opposite-sign same-flavor leptons at CMS</u></i></td>
+    </tr>
+    <tr>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071810/" style="color:white">Searches for R-Parity violating SUSY with the ATLAS detector (15' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2219937/" style="color:white">Searches for long lived SUSY particles (10' + 2')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071833/" style="color:white">Prospects for SUSY DM after the LHC Run 1 (15' + 5')</u></i></td>
+    </tr>
+    <tr>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071809/" style="color:white">Searches for SUSY in photons and tau channels with the ATLAS detector (15' + 5')</u></i></td>
+       </tr>
+     </table>
     
     </body>
     </html>
