--- a/rules.html
+++ b/rules.html
@@ -75,6 +75,8 @@
      <ul>
        <li style="margin-left:50px;color:white;font-size:22px">A Tournament is the highest tier, with regards to winning, of the game</li>
        <li style="margin-left:75px;color:white;font-size:18px">It’s a general category of physics within which there are many subcategories (Events)</li> 
+       <li style="margin-left:100px;color:white;font-size:14px">EXAMPLE: <i>Neutrino Tournament</i></li>
+       <li style="margin-left:125px;color:white;font-size:11px">The general category is "Neutrino(s)"</li>
      </ul>
        
        
