--- a/rules.html
+++ b/rules.html
@@ -90,7 +90,7 @@
         <li style="margin-left:75px;color:white;font-size:22px">Using the scores obtained from attending the presentations, the Users compare their scores for each Event and the User whose Team Member, individually, has the highest score wins that event</li>
         <li style="margin-left:75px;color:white;font-size:22px">EXAMPLE:</li>
        <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
-       <table style="width:100%">
+       <table style="color:white;width:100%">
          <tr>
            <th><b>Top Quark Event</b></th>
            <th><b>Bottom Quark Event</b></th>
