--- a/rules.html
+++ b/rules.html
@@ -92,6 +92,7 @@
        <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
          <tr>
+           <th><b>Event: </b></th>
            <th><b>Top Quark Event</b></th>
            <th><b>Bottom Quark Event</b></th>
            <th><b>Strange Quark Event</b></th>
