--- a/rules.html
+++ b/rules.html
@@ -104,6 +104,13 @@
          <tr>
            <td>Team 2: 6pts</td>
          </tr>
+         <tr>
+           <th rowspan="2" style="color:blue">User B: </th>
+           <td style="color:red">Team 1: 13pts</td>
+         </tr>
+         <tr>
+           <td>Team 2: 2pts</td>
+         </tr>
        </table>
      </ul>
        
