--- a/rules.html
+++ b/rules.html
@@ -106,7 +106,7 @@
          </tr>
          <tr>
            <th rowspan="2" style="color:blue">User B: </th>
-           <td style="color:red">Team 1: 13pts</td>
+           <td style="color:lightred">Team 1: 13pts</td>
          </tr>
          <tr>
            <td>Team 2: 2pts</td>
