--- a/rules.html
+++ b/rules.html
@@ -106,7 +106,7 @@
          </tr>
          <tr>
            <th rowspan="2" style="color:blue">User B: </th>
-           <td><font color="rgb(255, 101, 98)">Team 1: 13pts</font></td>
+           <td style="color:rgb(255, 101, 98)">Team 1: 13pts</td>
          </tr>
          <tr>
            <td>Team 2: 2pts</td>
