--- a/rules.html
+++ b/rules.html
@@ -100,16 +100,24 @@
          <tr>
            <th rowspan="2">User A: </th>
            <td>Team 1: 10pts</td>
+           <td>Team 1: 17pts</td>
+           <td>Team 1: 13pts</td>
          </tr>
          <tr>
            <td>Team 2: 6pts</td>
+           <td>Team 2: 5pts</td>
+           <td style="color:rgb(255, 101, 98)">Team 2: 21pts</td>
          </tr>
          <tr>
-           <th rowspan="2" style="color:blue">User B: </th>
+           <th rowspan="2">User B: </th>
            <td style="color:rgb(255, 101, 98)">Team 1: 13pts</td>
+           <td>Team 1: 3pts</td>
+           <td>Team 1: 17pts</td>
          </tr>
          <tr>
            <td>Team 2: 2pts</td>
+           <td style="color:rgb(255, 101, 98)">Team 2: 19pts</td>
+           <td>Team 2: 19pts</td>
          </tr>
        </table>
      </ul>
