--- a/rules.html
+++ b/rules.html
@@ -88,7 +88,7 @@
         <h3 style="margin-left:25px;font-size:30px;color:white">Tie Breaker (Amount of GP does not matter here)</h3>
            <li style="margin-left:50px;color:white;font-size:25px">Event process(with the exception of attending Team presentations) is repeated between only the preliminary winners</li>
         <li style="margin-left:75px;color:white;font-size:22px">Using the scores obtained from attending the presentations, the Users compare their scores for each Event and the User whose Team Member, individually, has the highest score wins that event</li>
-        <li style="margin-left:75px;color:white;font-size:22px">EXAMPLE:</li>
+        <li style="margin-left:100px;color:white;font-size:19px">EXAMPLE:</li>
        <h4 style="text-align:center;color:white"><b><i>Neutrino Tournament</b></i></h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
          <tr>
@@ -120,6 +120,7 @@
            <td>Team 2: 19pts</td>
          </tr>
        </table>
+       <li style="margin-left:50px;color:rbg(255, 101, 98);font-size:16px">User B won the most Events and thus, the Tournament</li>
      </ul>
        
        
