--- a/rules.html
+++ b/rules.html
@@ -120,7 +120,7 @@
            <td>Team 2: 19pts</td>
          </tr>
        </table>
-       <li style="margin-left:50px;color:rbg(255, 101, 98);font-size:16px">User B won the most Events and thus, the Tournament</li>
+       <li style="margin-left:50px;color:white;font-size:16px"><i>User B won the most Events and thus, the Tournament</i></li>
      </ul>
        
        
