--- a/rules.html
+++ b/rules.html
@@ -120,7 +120,9 @@
            <td>Team 2: 19pts</td>
          </tr>
        </table>
-       <li style="margin-left:50px;color:white;font-size:16px"><i>User B won the most Events and thus, the Tournament</i></li>
+       <li style="margin-left:50px;color:white;font-size:20px"><i>User B won the most Events and thus, the Tournament</i></li>
+     <li style="margin-left:75px;color:white;font-size:18px">The preliminary winner who wins the most Events is the Tournament Champion</li>
+        <li style="margin-left:100px;color:white;font-size:16px">Tie Breaker is activated, if applicable, until there is only one User left</li>  
      </ul>
        
        
