--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="home.html">Home</a></li>
+      <li class="active"><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="rules.html">Rules</a></li>
       <li><a href="teamrosters.html">Team Rosters</a></li>
