--- a/teamrosters.html
+++ b/teamrosters.html
@@ -4,6 +4,19 @@
      <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDDolu-qeP-GifEf8DTWmrwHcVG1Kzpwwg",
+    authDomain: "fantasy-physics.firebaseapp.com",
+    databaseURL: "https://fantasy-physics.firebaseio.com",
+    projectId: "fantasy-physics",
+    storageBucket: "",
+    messagingSenderId: "735145306132"
+  };
+  firebase.initializeApp(config);
+</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       </head>
