--- a/signup.html
+++ b/signup.html
@@ -59,3 +59,8 @@
     </form>
        </div>
 </nav>
+    
+    <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
+      </body>
+    </html>
+      
