--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -49,8 +49,8 @@
     </ul>
     
      <ul class="nav navbar-nav navbar-right">
-       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+       <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
       <form class="navbar-form navbar-right" role="search">
       <div class="form-group">
