--- a/signup.html
+++ b/signup.html
@@ -17,11 +17,11 @@
     authDomain: "fantasy-physics.firebaseapp.com",
     databaseURL: "https://fantasy-physics.firebaseio.com",
     projectId: "fantasy-physics",
-    storageBucket: "",
+    storageBucket: "fantasy-physics.appspot.com",
     messagingSenderId: "735145306132"
   };
   firebase.initializeApp(config);
-</script>
+   </script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
