--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 <body style="background-image:url(https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d8c03c98f431a4dbbfb5f93962fa44e7&w=1000&q=80)">
- 
+ .main-div{
+  width: 20%;
+  margin: 0px auto;
+  margin-top: 150px;
+  padding: 20px
+  }
   <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -17,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
       </button>
-      <a class="navbar-brand" href="#">Fantasy Physics</a>
+      <a class="navbar-brand" href="index.html">Fantasy Physics</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
