--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html> 
 <html>
   <head>
+    <style>
+      .center{
+        padding: 70px 0;
+        text-align: center;
+      }
+    </style>
    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -38,19 +44,12 @@
     </form>
        </div>
 </nav>
-
     
-     .main-div{
-  width: 20%;
-  margin: 0px auto;
-  margin-top: 300px;
-  padding: 70px
-  }
-    
+    <div class="center">
   <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
   <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
   <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
     <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
-
+    </div>
 </body> 
 </html> 
