--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html> 
 <html>
   <head>
+    <style>
+      .center{
+        padding: 70px 0;
+        text-align: center;
+      }
+    </style>
    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -55,10 +61,12 @@
        </div>
 </nav>
     
+    <div class="center">
     <div class="container">
       <input id="txtEmail" type="email" placeholder="Email"><br>
       <input id="txtPassword" type="password" placeholder="Password"><br>
       <button id="btnSignUp" class="btn btn-action">Sign Up</button>
+    </div>
     </div>
     
       </body>
