--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       .center{
-        padding: auto;
+        padding: 150px;
         text-align: center;
       }
     </style>
