--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,15 @@
         padding: 180px 0;
         text-align: center;
       }
+      .main-div input{
+        display: block;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 15px;
+        outline: none;
+        width: 100%;
+        margin-bottom: 20px
+      }
     </style>
    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,11 +71,13 @@
 </nav>
     
     <div class="center">
+      <div class="main-div input">
     <div class="container">
       <input id="txtEmail" type="email" placeholder="Email"><br>
       <input id="txtPassword" type="password" placeholder="Password"><br>
       <button id="btnSignUp" class="btn btn-action">Sign Up</button>
     </div>
+      </div>
     </div>
     
       </body>
