--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,7 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         outline: none;
+        padding: 15px;
         width: 100%;
         margin-bottom: 20px
       }
@@ -69,10 +70,10 @@
        </div>
 </nav>
     
+       <div class="center">
        <h2 style="text-align:center;color:white"><i> Sign up to unlock the potential </i></h2>
     <h3 style="text-align:center;color:white"><i> of </i></h3>
     <h2 style="text-align:center;color:white"><i> FANTASY PHYSICS </i></h2>
-    <div class="center">
       <div class="main-div input">
     <div class="container">
       <input id="txtEmail" type="email" placeholder="Email"><br>
