--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <style>
+       .center{
+        padding: 180px 0;
+        text-align: center;
+      }
       .main-div input{
         display: block;
         border: 1px solid #ccc;
@@ -66,14 +70,18 @@
        </div>
 </nav>
     
-       <h2 style="text-align:center;color:white"><i> Sign up to unlock the potential </i></h2>
-    <h3 style="text-align:center;color:white"><i> of </i></h3>
+       <h1 style="text-align:center;color:white"><i> Sign up </i></h1>
+    <h3 style="text-align:center;color:white"><i> to </i></h3>
+     <h2 style="text-align:center;color:white"><i> unlock the potential </i></h2>
+      <h3 style="text-align:center;color:white"><i> of </i></h3>
     <h2 style="text-align:center;color:white"><i> FANTASY PHYSICS </i></h2>
+    <div class="center">
       <div class="main-div input">
     <div class="container">
       <input id="txtEmail" type="email" placeholder="Email"><br>
       <input id="txtPassword" type="password" placeholder="Password"><br>
       <button id="btnSignUp" class="btn btn-action">Sign Up</button>
+      </div>
       </div>
     </div>
     
