--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <style>
        .center{
-        padding: 180px 0;
+        padding: 100px 0;
         text-align: center;
       }
       .main-div input{
@@ -70,8 +70,7 @@
        </div>
 </nav>
     
-       <h1 style="text-align:center;color:white"><i> Sign up </i></h1>
-    <h3 style="text-align:center;color:white"><i> to </i></h3>
+       <h2 style="text-align:center;color:white"><i> Sign up to</i></h1>
      <h2 style="text-align:center;color:white"><i> unlock the potential </i></h2>
       <h3 style="text-align:center;color:white"><i> of </i></h3>
     <h2 style="text-align:center;color:white"><i> FANTASY PHYSICS </i></h2>
