--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
       </button>
-      <a class="navbar-brand" href="#">Fantasy Physics</a>
+      <a class="navbar-brand" href="index.html">Fantasy Physics</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
      <ul class="nav navbar-nav">
@@ -49,8 +49,8 @@
     </ul>
     
      <ul class="nav navbar-nav navbar-right">
-       <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+       <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
       <form class="navbar-form navbar-right" role="search">
       <div class="form-group">
