--- a/teamrosters.html
+++ b/teamrosters.html
@@ -5,11 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-messaging.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-functions.js"></script>
  <script>
   // Initialize Firebase
   var config = {
@@ -37,7 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
       </button>
-      <a class="navbar-brand" href="#">Fantasy Physics</a>
+      <a class="navbar-brand" href="index.html">Fantasy Physics</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
      <ul class="nav navbar-nav">
