--- a/signup.html
+++ b/signup.html
@@ -70,10 +70,9 @@
        </div>
 </nav>
     
-       <h2 style="text-align:center;color:white"><i> Sign up to</i></h1>
+       <h2 style="text-align:center;color:white"><i> Sign up </i></h1>
+    <h3 style="text-align:center;color:white"><i> to </i></h3>
      <h2 style="text-align:center;color:white"><i> unlock the potential </i></h2>
-      <h3 style="text-align:center;color:white"><i> of </i></h3>
-    <h2 style="text-align:center;color:white"><i> FANTASY PHYSICS </i></h2>
     <div class="center">
       <div class="main-div input">
     <div class="container">
