--- a/login.html
+++ b/login.html
@@ -79,10 +79,12 @@
     <div class="container">
       <input id="txtEmail" type="email" placeholder="Email"><br>
       <input id="txtPassword" type="password" placeholder="Password"><br>
-      <button id="btnLogIn" class="btn btn-action">Log In</button>
+      <button id="btnLogIn" onclick="login()" class="btn btn-action">Log In</button>
       </div>
       </div>
     </div>
        
+       <script src="index.js"></script>
+               
        </body>
       </html>
