--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
     authDomain: "fantasy-physics.firebaseapp.com",
     databaseURL: "https://fantasy-physics.firebaseio.com",
     projectId: "fantasy-physics",
-    storageBucket: "",
+    storageBucket: "fantasy-physics.appspot.com",
     messagingSenderId: "735145306132"
   };
   firebase.initializeApp(config);
