--- a/login.html
+++ b/login.html
@@ -62,9 +62,9 @@
     <div class="center">
       <div class="main-div input">
     <div class="container">
-      <input id="txtEmail" type="email" placeholder="Email"><br>
-      <input id="txtPassword" type="password" placeholder="Password"><br>
-      <button id="btnLogIn" onclick="login()" class="btn btn-action">Log In</button>
+      <input type="email" placeholder="Email"><br>
+      <input type="password" placeholder="Password"><br>
+      <button onclick="login()">Log In</button>
       </div>
       </div>
     </div>
