--- a/login.html
+++ b/login.html
@@ -83,7 +83,7 @@
   firebase.initializeApp(config);
   </script>
        
-   <script src="index.js"></script>
+   <script src="login.js"></script>
                
        </body>
       </html>
