--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -62,10 +62,14 @@
     <tr>
       <th scope="col" width="130"></th>
       <th scope="col">Largest dataset		+2</th>
-      <th scope="col">Most number of  significant figures		+0.5</th>
-       <th scope="col">Highest/Lowest Temperature Mentioned 	+1</th>
-       <th scope="col">Highest/Lowest Energy Value		+2</th>
-       <th scope="col">Amount of Feynman Diagrams 	+2</th>
+      <th scope="col">Most number of  significant figures		
+        +0.5</th>
+       <th scope="col">Highest/Lowest Temperature Mentioned 	
+         +1</th>
+       <th scope="col">Highest/Lowest Energy Value		
+         +2</th>
+       <th scope="col">Amount of Feynman Diagrams 	
+         +2</th>
      </tr>
     <tr>
       <td><i>PICO</i></td>
