--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -61,15 +61,14 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
       <th scope="col" width="130"></th>
-      <th scope="col">Largest dataset		+2</th>
-      <th scope="col">Most number of  significant figures		
-        +0.5</th>
-       <th scope="col">Highest/Lowest Temperature Mentioned 	
-         +1</th>
-       <th scope="col">Highest/Lowest Energy Value		
-         +2</th>
-       <th scope="col">Amount of Feynman Diagrams 	
-         +2</th>
+      <th scope="col">Largest dataset		(+2)</th>
+      <th scope="col">Most number of  significant figures     (+0.5)</th>
+      <th scope="col">Highest/Lowest Temperature Mentioned 	(+1)</th>
+      <th scope="col">Highest/Lowest Energy Value	 (+2)</th>
+      <th scope="col">Amount of Feynman Diagrams 	(+2)</th>
+      <th scope="col">Most Number of Questions Asked By the Audience in a Session	(+1)</th>
+      <th scope="col">Most Data Points on a Graph (+1)</th>
+      <th scope="col">Most Greek Letters Used	(+1)</th>
      </tr>
     <tr>
       <td><i>PICO</i></td>
