--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -72,15 +72,20 @@
       <th scope="col">Most Amount of References?		(+1)</th>
       <th scope="col">Most Greek Letters Used	(+1)</th>
       <th scope="col">How many times research genre word is mentioned 
-                          <10	0	
-                          11 - 20		+.5
-                          21 - 30		+1
-                          31+		+2
-	                        (+1)</th>
+                          10			(0)	
+                          11 - 20		(+.5)
+                          21 - 30		(+1)
+                          31+			(+2)			</th>
+	<th scope="col">Using a pointer 	(+0.5)</th>
+	<th scope="col">Most anecdotes told 		(+2)</th>
+	<th scope="col">Time presented (plus or minus two minutes)
+			= time allotted 		(+2)
+			> time allotted			(0)
+			< time allotted 		(+0.5)		</th>
      </tr>
     <tr>
       <td><i>PICO</i></td>
-       <td></td>
+       	 <td></td>
          <td></td>
 	 <td></td>
 	 <td></td>
@@ -88,8 +93,9 @@
 	 <td></td>
          <td></td>
          <td></td>
-      <td></td>
-          </tr>
+	 <td></td>
+      	 <td></td>
+           <td></td></tr>
     <tr>
       <td><i>SuperCDMS</i></td>
       <td></td>
