--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -60,10 +60,10 @@
        <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <th scope="col" width="170"></th>
-      <th scope="col">Largest dataset		(+2)</th>
-      <th scope="col">Most number of  significant figures     (+0.5)</th>
-      <th scope="col">Highest/Lowest Temperature Mentioned 	(+1)</th>
+      <th scope="col" width="130"></th>
+      <th scope="col" width="150">Largest dataset		(+2)</th>
+      <th scope="col" width="200">Most number of  significant figures     (+0.5)</th>
+      <th scope="col" width="200">Highest/Lowest Temperature Mentioned 	(+1)</th>
       <th scope="col">Highest/Lowest Energy Value	 (+2)</th>
       <th scope="col">Amount of Feynman Diagrams 	(+2)</th>
       <th scope="col">Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
@@ -95,6 +95,9 @@
          <td></td>
 	 <td></td>
       	 <td></td>
+	 <td></td>
+	 <td></td>
+	 <td></td>
            <td></td></tr>
     <tr>
       <td><i>SuperCDMS</i></td>
