--- a/signup.html
+++ b/signup.html
@@ -64,7 +64,7 @@
     <div class="container">
       <input id="txtEmail" type="email" placeholder="Email"><br>
       <input id="txtPassword" type="password" placeholder="Password"><br>
-      <button onclick="signup()" id="btnSignUp" class="btn btn-action">Sign Up</button>
+      <button onclick="signup()" id="btnSignUp">Sign Up</button>
       </div>
       </div>
     </div>
