--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -65,20 +65,20 @@
       <th scope="col" width="200">Most number of  significant figures     (+0.5)</th>
       <th scope="col" width="200">Highest/Lowest Temperature Mentioned 	(+1)</th>
       <th scope="col" width="150">Highest/Lowest Energy Value	 (+2)</th>
-      <th scope="col" width="200>Amount of Feynman Diagrams 	(+2)</th>
-      <th scope="col" width="200>Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
-      <th scope="col" width="200>Most Data Points on a Graph   (+1)</th>
-      <th scope="col" width="200>Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
-      <th scope="col" width="200>Most Amount of References?		(+1)</th>
-      <th scope="col" width="200>Most Greek Letters Used	(+1)</th>
-      <th scope="col" width="200>How many times research genre word is mentioned 
+      <th scope="col" width="200">Amount of Feynman Diagrams 	(+2)</th>
+      <th scope="col" width="200">Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
+      <th scope="col" width="200">Most Data Points on a Graph   (+1)</th>
+      <th scope="col" width="200">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
+      <th scope="col" width="200">Most Amount of References?		(+1)</th>
+      <th scope="col" width="200">Most Greek Letters Used	(+1)</th>
+      <th scope="col" width="200">How many times research genre word is mentioned 
                           10			(0)	
                           11 - 20		(+.5)
                           21 - 30		(+1)
                           31+			(+2)			</th>
-	<th scope="col" width="200>Using a pointer 	(+0.5)</th>
-	<th scope="col" width="200>Most anecdotes told 		(+2)</th>
-	<th scope="col" width="200>Time presented (plus or minus two minutes)
+	<th scope="col" width="200">Using a pointer 	(+0.5)</th>
+	<th scope="col" width="200">Most anecdotes told 		(+2)</th>
+	<th scope="col" width="200">Time presented (plus or minus two minutes)
 			= time allotted 		(+2)
 			> time allotted			(0)
 			< time allotted 		(+0.5)		</th>
