--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -60,7 +60,7 @@
        <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <th scope="col" width="130"></th>
+      <th scope="col"></th>
       <th scope="col" width="150">Largest dataset		(+2)</th>
       <th scope="col" width="200">Most number of  significant figures     (+0.5)</th>
       <th scope="col" width="200">Highest/Lowest Temperature Mentioned 	(+1)</th>
