--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -61,7 +61,7 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
       <th scope="col"></th>
-      <th scope="col" width="150">Largest dataset		(+2)</th>
+      <th scope="col" width="100">Largest dataset		(+2)</th>
       <th scope="col" width="200">Most number of  significant figures     (+0.5)</th>
       <th scope="col" width="200">Highest/Lowest Temperature Mentioned 	(+1)</th>
       <th scope="col" width="150">Highest/Lowest Energy Value	 (+2)</th>
@@ -152,7 +152,7 @@
          <td></td>
 </tr>
     <tr>
-      <td><i>Pacific NW National Lab - WIMP Search</i></td>
+      <td><i>Pacific NW National Lab</i></td>
       <td></td>
          <td></td>
 	 <td></td>
