--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -76,9 +76,9 @@
                           11 - 20		(+.5)
                           21 - 30		(+1)
                           31+			(+2)			</th>
-	<th scope="col" width="100">Using a pointer 	(+0.5)</th>
-	<th scope="col" width="100">Most anecdotes told 		(+2)</th>
-	<th scope="col" width="100">Time presented (plus or minus two minutes)
+	<th scope="col" width="100">Using a pointer 	(+0.5)	</th>
+	<th scope="col" width="100">Most anecdotes told 		(+2)	</th>
+	<th scope="col" width="100">Time presented (±2min)
 			= time allotted 		(+2)
 			> time allotted			(0)
 			< time allotted 		(+0.5)		</th>
