--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -61,9 +61,9 @@
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
       <th scope="col"></th>
-      <th scope="col" width="100">Largest dataset		(+2)</th>
-      <th scope="col" width="100">Most number of  significant figures     (+0.5)</th>
-      <th scope="col" width="100">Highest/Lowest Temperature Mentioned 	(+1)</th>
+      <th scope="col">Largest dataset		(+2)</th>
+      <th scope="col">Most number of  significant figures     (+0.5)</th>
+      <th scope="col">Highest/Lowest Temperature Mentioned 	(+1)</th>
       <th scope="col" width="100">Highest/Lowest Energy Value	 (+2)</th>
       <th scope="col" width="100">Amount of Feynman Diagrams 	(+2)</th>
       <th scope="col" width="100">Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
