--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -64,21 +64,21 @@
       <th scope="col">Largest dataset		(+2)</th>
       <th scope="col">Most number of  significant figures     (+0.5)</th>
       <th scope="col">Highest/Lowest Temperature Mentioned 	(+1)</th>
-      <th scope="col" width="100">Highest/Lowest Energy Value	 (+2)</th>
-      <th scope="col" width="100">Amount of Feynman Diagrams 	(+2)</th>
-      <th scope="col" width="100">Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
-      <th scope="col" width="100">Most Data Points on a Graph   (+1)</th>
-      <th scope="col" width="100">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
-      <th scope="col" width="100">Most Amount of References?		(+1)</th>
-      <th scope="col" width="100">Most Greek Letters Used	(+1)</th>
-      <th scope="col" width="100">How many times research genre word is mentioned 
+      <th scope="col">Highest/Lowest Energy Value	 (+2)</th>
+      <th scope="col">Amount of Feynman Diagrams 	(+2)</th>
+      <th scope="col">Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
+      <th scope="col">Most Data Points on a Graph   (+1)</th>
+      <th scope="col">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
+      <th scope="col">Most Amount of References?		(+1)</th>
+      <th scope="col">Most Greek Letters Used	(+1)</th>
+      <th scope="col">How many times research genre word is mentioned 
                           10			(0)	
                           11 - 20		(+.5)
                           21 - 30		(+1)
                           31+			(+2)			</th>
-	<th scope="col" width="100">Using a pointer 	(+0.5)	</th>
-	<th scope="col" width="100">Most anecdotes told 		(+2)	</th>
-	<th scope="col" width="100">Time presented (±2min)
+	<th scope="col">Using a pointer 	(+0.5)	</th>
+	<th scope="col">Most anecdotes told 		(+2)	</th>
+	<th scope="col">Time presented (±2min)
 			= time allotted 		(+2)
 			> time allotted			(0)
 			< time allotted 		(+0.5)		</th>
