--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -58,7 +58,7 @@
        
        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
        <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
-       <table width="75%" class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+       <table colspan="3" class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
       <th scope="col"></th>
       <th scope="col">Largest dataset		(+2)</th>
