--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -294,7 +294,7 @@
        <h4 style="margin-left:5px;color:white">Top Quark</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <th scope="col" width="400">Experiment</th>
+      <th scope="col" length="130" width="130">Experiment</th>
       <th scope="col"></th>
       <th scope="col"></th>
       <th scope="col"></th>
