--- a/login.html
+++ b/login.html
@@ -19,9 +19,10 @@
    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-auth.js"></script>
-<script>
+<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+  <script>
   // Initialize Firebase
   var config = {
     apiKey: "AIzaSyDDolu-qeP-GifEf8DTWmrwHcVG1Kzpwwg",
