--- a/login.html
+++ b/login.html
@@ -89,9 +89,9 @@
       </div>
     </div>
        
-       <div id="user_div" class="loggedin-div">
-         <h3 style="color:white">Welcome!</h3>
-         <p id="user_para">You are currently logged in.</p>
+       <div id="user_div" class="main-div input">
+         <h3 style="text-align:center;color:white"><font face="sans-serif">Welcome!</h3>
+         <p id="user_para" style="text-align:center;color:white"><font face="sans-serif">You are currently logged in.</p>
          <button onclick="logout()">Logout</button>
        </div> 
 
