--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -45,20 +45,12 @@
        <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
        <table colspan="3" class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <th scope="col">Largest dataset		(+2)</th>
-      <th scope="col">Most number of  significant figures     (+0.5)</th>
-      <th scope="col">Highest/Lowest Temperature Mentioned 	(+1)</th>
-      <th scope="col">Highest/Lowest Energy Value	 (+2)</th>
-      <th scope="col">Amount of Feynman Diagrams 	(+2)</th>
-      <th scope="col">Most Number of Questions Asked By the Audience in a Session 	(+1)</th>
-     </tr>
-    <tr>
-      <td></td>
-       	 <td></td>
-         <td></td>
-	 <td></td>
-	 <td></td>
-	 <td></td>
+      <td>Largest Dataset (+2)</td>
+       	 <td>Most Number of Significant Figures (+0.5)</td>
+         <td>Highest/Lowest Temperature Mentioned (+1)</td>
+	 <td>Highest/Lowest Energy Value (+2)</td>
+	 <td>Amount of Feynman Diagrams (+2)</td>
+	 <td>Most Number of Questions Asked by Audience in a Session (+1)</td>
 </tr>
     <tr>
       <td><i>SuperCDMS</i></td>
