--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -44,13 +44,46 @@
        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
        <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
        <table colspan="3" class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
+	<tr>
+		 <th scope="col">Largest Dataset (+2)</th>
+       	 <th scope="col">Most Number of Significant Figures (+0.5)</th>
+         <th scope="col">Highest/Lowest Temperature Mentioned (+1)</th>
+	 <th scope="col">Highest/Lowest Energy Value (+2)</th>
+	 <th scope="col">Amount of Feynman Diagrams (+2)</th>
+	 <th scope="col">Most Number of Questions Asked by Audience in a Session (+1)</th>
+	<th scope="col">Most Data Points on a Graph   (+1)</th>
+      <th scope="col">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
+      <th scope="col">Most Amount of References?		(+1)</th>
+      <th scope="col">Most Greek Letters Used	(+1)</th>
+      <th scope="col">How many times research genre word is mentioned 
+                          10			(0)	
+                          11 - 20		(+.5)
+                          21 - 30		(+1)
+                          31+			(+2)			</th>
+	<th scope="col">Using a pointer 	(+0.5)	</th>
+	<th scope="col">Most anecdotes told 		(+2)	</th>
+	<th scope="col">Time presented (±2min)
+			= time allotted 		(+2)
+			> time allotted			(0)
+			< time allotted 		(+0.5)		</th>
+	       </tr>
     <tr>
-      <td>Largest Dataset (+2)</td>
-       	 <td>Most Number of Significant Figures (+0.5)</td>
-         <td>Highest/Lowest Temperature Mentioned (+1)</td>
-	 <td>Highest/Lowest Energy Value (+2)</td>
-	 <td>Amount of Feynman Diagrams (+2)</td>
-	 <td>Most Number of Questions Asked by Audience in a Session (+1)</td>
+     <td><i>PICO</i></td>
+       <td></td>
+         <td></td>
+	 <td></td>
+	 <td></td>
+	 <td></td>
+	 <td></td>
+         <td></td>
+         <td></td>
+	 <td></td>
+      	 <td></td>
+	 <td></td>
+	 <td></td>
+	 <td></td>
+         <td></td>
+</tr>
 </tr>
     <tr>
       <td><i>SuperCDMS</i></td>
