--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -45,17 +45,18 @@
        <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
        <table colspan="3" class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
 	<tr>
-		 <th scope="col">Largest Dataset (+2)</th>
+	 <th scope="col"></th>
+	 <th scope="col">Largest Dataset (+2)</th>
        	 <th scope="col">Most Number of Significant Figures (+0.5)</th>
          <th scope="col">Highest/Lowest Temperature Mentioned (+1)</th>
 	 <th scope="col">Highest/Lowest Energy Value (+2)</th>
 	 <th scope="col">Amount of Feynman Diagrams (+2)</th>
 	 <th scope="col">Most Number of Questions Asked by Audience in a Session (+1)</th>
-	<th scope="col">Most Data Points on a Graph   (+1)</th>
-      <th scope="col">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
-      <th scope="col">Most Amount of References?		(+1)</th>
-      <th scope="col">Most Greek Letters Used	(+1)</th>
-      <th scope="col">How many times research genre word is mentioned 
+	 <th scope="col">Most Data Points on a Graph   (+1)</th>
+      	 <th scope="col">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
+     	 <th scope="col">Most Amount of References?		(+1)</th>
+     	 <th scope="col">Most Greek Letters Used	(+1)</th>
+    	 <th scope="col">How many times research genre word is mentioned 
                           10			(0)	
                           11 - 20		(+.5)
                           21 - 30		(+1)
