--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
         <input type="last name" placeholder="Last Name" iid="last_name"><br>
         <input type="email" placeholder="Email" id="email_field"><br>
         <input type="password" placeholder="Password" id="password_field"><br>
-        <button onclick="signup">Sign Up</button>
+        <button onclick="signup()">Sign Up</button>
     </div>
     </div>
     </div>
