--- a/login.html
+++ b/login.html
@@ -64,6 +64,7 @@
         <li><a href="rules.html">Rules</a></li>
         <li><a href="teamrosters.html">Team Rosters</a></li>
         <li><a href="scoringrubric.html">Scoring Rubric</a></li>
+        <li><a href="scoringrubric.html">Join a Tournament</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
