--- a/signup.html
+++ b/signup.html
@@ -85,7 +85,7 @@
     <div id="login_div" class="main-div input">
     <div class="container">
         <input type="first name" placeholder="First Name" id="first_name"><br>
-        <input type="last name" placeholder="Last Name" iid="last_name"><br>
+        <input type="last name" placeholder="Last Name" id="last_name"><br>
         <input type="email" placeholder="Email" id="email_field"><br>
         <input type="password" placeholder="Password" id="password_field"><br>
         <button onclick="signup()">Sign Up</button>
