--- a/teamrosters.html
+++ b/teamrosters.html
@@ -41,6 +41,7 @@
       <li><a href="rules.html">Rules</a></li>
       <li><a href="teamrosters.html">Team Rosters</a></li>
       <li><a href="scoringrubric.html">Scoring Rubric</a></li>
+       <li><a href="joinatournament.html">Join a Tournament</a></li>
     </ul>
     
      <ul class="nav navbar-nav navbar-right">
