--- a/login.html
+++ b/login.html
@@ -93,10 +93,10 @@
     </div>
     </div>
        
-    <div id="user_div" class="main-div input">
+    <div id="user_div">
          <h3 style="text-align:center;color:white"><font face="sans-serif">Welcome!</h3>
          <p id="user_para" style="text-align:center;color:white"><font face="sans-serif">You are currently logged in.</p>
-         <button onclick="logout()">Logout</button>
+         <button style="onclick="logout()">Logout</button>
     </div> 
 
 </body>
