--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
     </div>
     </div>
        
-    <div id="user_div">
+    <div id="user_div" class="main-div">
          <h3 style="text-align:center;color:white"><font face="sans-serif">Welcome!</h3>
          <p id="user_para" style="text-align:center;color:white"><font face="sans-serif">You are currently logged in.</p>
          <button style="onclick="logout()">Logout</button>
