--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
         border-radius: 5px;
         outline: none;
         padding: 15px;
-        width: 100%;
+        width: 50%;
         margin-bottom: 20px
     }
 </style>
@@ -80,7 +80,7 @@
 </nav>
 
     <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Sign Up </i></h1>
-    <h3 style="text-align:center;color:white"><font face="sans-serif"><i> to </i></h3>
+    <h3 style="text-align:center;color:white"><font face="sans-serif"><i> and </i></h3>
     <h2 style="text-align:center;color:white"><font face="sans-serif"><i> ~ unlock the potential ~ </i></h2>
     <div class="center">
     <div id="login_div" class="main-div input">
@@ -92,7 +92,7 @@
     </div>
     </div>
 
-    <div id="user_div" class="main-div input">
+    <div id="user_div">
          <h3 style="text-align:center;color:white"><font face="sans-serif">Welcome!</h3>
          <p id="user_para" style="text-align:center;color:white"><font face="sans-serif">You are now signed up!</p>
          <button onclick="logout()">Logout</button>
