--- a/signup.html
+++ b/signup.html
@@ -85,7 +85,7 @@
     <div class="center">
     <div id="login_div" class="main-div input">
     <div class="container">
-        <input type="email" placeholder="Email" id="email_field"><br>
+        <input style="text-align:center type="email" placeholder="Email" id="email_field"><br>
         <input type="password" placeholder="Password" id="password_field"><br>
         <button onclick="signup()">Sign Up</button>
     </div>
