--- a/index.html
+++ b/index.html
@@ -1,56 +1,60 @@
 <!DOCTYPE html> 
 <html>
-  <head>
-    <style>
-      .center{
+<head>
+<style>
+    .center
+    {
         padding: 110px 0;
         text-align: center;
-      }
-    </style>
-   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
+    }
+</style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 <body style="background-image:url(https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d8c03c98f431a4dbbfb5f93962fa44e7&w=1000&q=80)">
-  <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+
+    <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
-      </button>
-      <a class="navbar-brand" href="index.html">Fantasy Physics</a>
+        </button>
+    <a class="navbar-brand" href="index.html">Fantasy Physics</a>
     </div>
+    </div>
+    
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="rules.html">Rules</a></li>
-      <li><a href="teamrosters.html">Team Rosters</a></li>
-      <li><a href="scoringrubric.html">Scoring Rubric</a></li>
-      <li><a href="joinatournament.html">Join a Tournament</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="rules.html">The Game</a></li>
+        <li><a href="teamrosters.html">The Crew</a></li>
+        <li><a href="scoringrubric.html">The Hunt</a></li>
+        <li><a href="joinatournament.html">Join a Tournament</a></li>
+        <li><a href="instructors.html">The Instructors</a></li>
     </ul>
-      <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
-      <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
-      <form class="navbar-form navbar-right" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search...">
-        </div> 
-       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
-    </form>
-       </div>
-</nav>
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search...">
+            </div> 
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+        </form>
+     </div>
+     </nav>
     
-    <div class="center">
-  <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
-  <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
-  <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
-    <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
-    </div>
+     <div class="center">
+         <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
+         <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
+         <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
+         <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
+     </div>
 </body> 
 </html> 
