--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
+        <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search...">
+            </div> 
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+        </form>
      </div>
      </nav>
      <div class="center">
