--- a/teamrosters.html
+++ b/teamrosters.html
@@ -21,12 +21,11 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="teamrosters.html">Team Rosters</a></li>
-        <li><a href="scoringrubric.html">Scoring Rubric</a></li>
+        <li><a href="rules.html">The Game</a></li>
+        <li><a href="teamrosters.html">The Crew</a></li>
+        <li><a href="scoringrubric.html">The Hunt</a></li>
         <li><a href="joinatournament.html">Join a Tournament</a></li>
+        <li><a href="instructors.html">Instructors</a></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
@@ -42,7 +41,7 @@
     </div> 
     </nav>
      
-        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2>
+        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Direct Dark Matter</b></i></h2>
         <h4 style="margin-left:5px;color:white">WIMP Experiments</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
