--- a/teamrosters.html
+++ b/teamrosters.html
@@ -21,6 +21,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="rules.html">The Game</a></li>
         <li><a href="teamrosters.html">The Crew</a></li>
         <li><a href="scoringrubric.html">The Hunt</a></li>
