--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
         </button>
-    <a class="navbar-brand" href="index.html">Fantasy Physics</a>
+    <a class="navbar-brand" href="index.html">Fantasy Physics
+    <img src="logo.png" style="display: inline-block;">
+    <span style="display: inline-block;">Fantasy Physics</span></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
