--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
         </button>
-    <a class="navbar-brand" href="index.html">
-    <img src="logo.png" style="display: inline-block;">
-    <span style="display: inline-block;"></span></a>
+    <a class="navbar-brand" href="index.html"> <img src="logo.png" style="display: inline-block;"> <span style="display: inline-block;"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
@@ -41,12 +39,6 @@
         <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
-        <form class="navbar-form navbar-right" role="search">
-            <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search...">
-            </div> 
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
-        </form>
      </div>
      </nav>
      <div class="center">
