--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
         </button>
-    <a class="navbar-brand" href="index.html"> 
-    <img src="logo.png"></a>
+    <a class="navbar-brand" href="index.html" style="padding:0px;"> 
+    <img src="logo.png" style="height:100%;"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
