--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>   
         </button>
     <a class="navbar-brand" href="index.html" style="padding:0px;"> 
-    <img src="logo.png" style="height:100%;width:auto"></a>
+    <img src="logo.png" style="height:100%;width:25px"></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
