--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         padding: 110px 0;
         text-align: center;
     }
+    .imgcenter
+    {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,8 +32,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
         </button>
-    <a class="navbar-brand" href="index.html" style="padding:0px;"> 
-    <img src="logo3.png" style="height:100%;width:auto"></a>
+        <a class="navbar-brand" href="index.html"><i>Fantasy Physics</i></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
@@ -46,6 +52,7 @@
      <div class="center">
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
+         <img src="logo3.png" class="imgcenter">
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> FANTASY PHYSICS <i></h1>
          <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
      </div>
